--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Mom to 6 year old girl boy twins. Previously I worked in fashion, I'm really excited to learn to code.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Brooklyn, NY / Omaha, NE</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Knitting and drawing</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>West Seattle</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to help create things that will help people.</p>
     </section>
 
     <footer id="footer">
